@@ -44,7 +44,8 @@ pthread_getspecific(pthread_key_t key)
 int
 pthread_key_delete(pthread_key_t key)
 {
-  /* FIXME: We must remove any associated destructors here. */
+  /* Remove this key's destructors. */
+  _pthread_destructor_pop(key);
 
   return (TlsFree(key) == FALSE) ? EINVAL : 0;
 }
