@@ -1,3 +1,11 @@
+Fri Jul 31 14:00:29 1998  Ross Johnson  <rpj@swan.canberra.edu.au>
+
+	* cleanup.c (_pthread_destructor_pop): Implement. Removes
+	destructors associated with a key without executing them.
+	(_pthread_destructor_pop_all): Add FIXME comment.
+
+	* tsd.c (pthread_key_delete): Add call to _pthread_destructor_pop().
+
 Fri Jul 31 00:05:45 1998  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>
 
 	* tsd.c (pthread_key_create): Update to properly associate
